add '-ea' to enable assertions in surefire tests; remove wince from build because it only works with win32 (Eclipse 4.9 and earlier)
Change-Id: Ia7fcaf6866fa22826596db0832693830300b67c6
Signed-off-by: nickboldt <nboldt@redhat.com>